--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,14 @@
-.App {
+.App{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
+  margin:0;
+  padding:0;
+}
+
+.App-header{
+  background-color: #282c34;
+
+  display:flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -24,15 +16,16 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+body{
+  margin-left: 2rem;
+  margin-right: 2rem;
+  /* background:red; */
+}
+@media (max-width: 480px) { /* phone */
+  body{
+    margin-left: 0.25rem;
+    margin-right: 0.25rem;
   }
-  to {
-    transform: rotate(360deg);
-  }
+  
 }
