--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+:root{
+  --dark: #000000;
+}
+
+html{
+  background: var(--dark);
+  color: #FDF0ED;
+  margin:0;
+  padding:0;
+}
+
+body{
+  margin:0;
+  padding:0;
+}
+
+*:focus{
+  outline:0;
+  outline:none;
+}
+
+*{
+  font-family: "Inter", "Roboto", Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  margin:0;
+  font-weight:400;
+  font-family: -apple-system, BlinkMacSystemFont, "Inter", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
+
+code{
+  font-family: source-code-pro, Menlo, Monaco, Consolas, monospace;
 }
