--- a/src/components/style.css
+++ b/src/components/style.css
@@ -117,7 +117,12 @@ input:focus::placeholder {
 
 html {
     margin: auto;
-    width: 96%;
+    width: 92%;
+}
+body{
+    /* margin-right:0.2rem; */
+    margin:0;
+    margin-right:0.1rem;
 }
 
 /* TOP CONTAINER */
@@ -456,7 +461,7 @@ h1 {
     /* half monitor */
     html {
 
-        width: 96%;
+        width: 92%;
     }
 
     input {
