--- a/src/components/style.css
+++ b/src/components/style.css
@@ -490,6 +490,9 @@ h1 {
         margin-left: 0rem;
     }
 
+    .underTitle p{
+        padding-right:1rem;
+    }
     .top-cont {
 
         display: grid;
@@ -498,6 +501,8 @@ h1 {
         /* make the freebox div take up the whole column on the right */
         grid-template-areas: "title" "freebox" "underTitle";
         margin-bottom: 1rem;
+        outline:1px solid red;
+        
     }
 
     .freebox {
