--- a/src/components/style.css
+++ b/src/components/style.css
@@ -217,6 +217,8 @@ h1 {
     /* outline: 1px solid purple; */
     margin-bottom: 0.5rem;
 
+    /* outline:1px solid green; */
+
 }
 
 .underTitle p {
@@ -227,6 +229,10 @@ h1 {
 
 }
 
+.link-cont{
+    margin-top: 0.8rem;
+    margin-bottom: 0.6rem;
+}
 .underTitle a {
     box-shadow: 0px 0px 0px 1px var(--white) inset;
     /* box-shadow: border-box;
@@ -244,8 +250,8 @@ h1 {
     /* remove default a tag styles */
     text-decoration: none;
     width: fit-content;
-    margin-top: 0.1rem;
-    margin-bottom: 0.6rem;
+    
+    
 }
 
 .underTitle a div {
@@ -279,6 +285,7 @@ h1 {
     transition: .2s all ease-out;
     color: black;
 }
+
 
 
 
@@ -382,6 +389,9 @@ h1 {
     
 }
 
+a{
+    cursor:pointer;
+}
 
 
 .card span {
