--- a/src/components/style.css
+++ b/src/components/style.css
@@ -224,6 +224,7 @@ h1 {
     padding: 0;
     margin-top: 0.2rem;
     padding-left: 0.5rem;
+    padding-right: 0.5rem;
 
     /* outline:1px solid red; */
 }
