--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@300..900&display=swap");
 
 :root {
-    --white: #FDF0ED;
-    --whiter: #FDF0EDde;
+    --white: #fdf0ed;
+    --whiter: #fdf0edde;
     --scrollbar: 0.2rem;
     overflow-x: none;
 }
@@ -13,7 +13,6 @@
     background: var(--white);
 }
 
-/* Hide the default scrollbar */
 ::-webkit-scrollbar {
     position: absolute;
     width: var(--scrollbar);
@@ -42,23 +41,10 @@
     background: black;
 }
 
-/* Create the custom scrollbar */
 ::-webkit-scrollbar-thumb {
     background-color: var(--white);
     border-radius: 10px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 div.content {
     margin-left: 200px;
@@ -71,39 +57,35 @@ div {
 }
 
 .header {
-
     width: 100%;
-    margin: 1rem 0;
+    margin: 0.75rem 0;
+    margin-top: 1.25rem;
 }
 
-
 input {
-    z-index:9;
-    border: solid 2px #2E303E;
+    z-index: 9;
+    border: solid 2px #2e303e;
     outline: none;
     padding: 0.7em;
     border-radius: 10px;
-    /* set background to blur waht is behind it */
     background: transparent;
-
     color: var(--white);
     max-width: 60em;
-    width: 50%;
+    width: 60%;
     transition: all 0.4s ease;
-    caret-color: #E95379;
+    caret-color: #e95379;
     display: block;
     position: relative;
     font-size: 17px;
     margin: auto;
-
 }
 
 input:focus {
-    border: solid 2px #6C6F93;
+    border: solid 2px #6c6f93;
     padding-left: 1em;
     padding-right: 1em;
     max-width: 62em;
-    width: 51%;
+    width: 61%;
 }
 
 input:focus::placeholder {
@@ -111,41 +93,27 @@ input:focus::placeholder {
     transition: all 0.1s ease;
 }
 
-
-
-
-
 html {
     margin: auto;
     width: 92%;
 }
-body{
-    /* margin-right:0.2rem; */
-    margin:0;
-    margin-right:0.1rem;
+body {
+    margin: 0;
+    margin-right: 0.1rem;
 }
-
-/* TOP CONTAINER */
-
-
 
 h1 {
     font-size: 11vw;
     font-family: "Poppins", sans-serif;
     font-weight: 700;
-
 }
 
 .top-cont {
-
     display: grid;
     grid-template-columns: 6fr 4fr;
-    /* two columns */
     grid-template-rows: 10fr 5.6fr;
-    /* auto-sizing rows */
-    /* make the freebox div take up the whole column on the right */
     grid-template-areas: "title freebox" "underTitle freebox";
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .title {
@@ -159,25 +127,17 @@ h1 {
     padding-bottom: 0.4rem;
     line-height: 7vw;
     position: relative;
-
-    user-select:none;
-
-
-    /* outline:1px solid blue; */
+    user-select: none;
     width: 100%;
     overflow-x: visible;
-
-    font-family: "Poppins", sans-serif;
     font-size: 11vw;
     margin: auto;
-
 }
 
 .title h1 {
     margin: 0rem;
     padding: 1rem;
     font-size: 10vw;
-    /* background: red; */
 }
 
 .title .second {
@@ -190,32 +150,22 @@ h1 {
     grid-area: freebox;
     display: inline-block;
     position: relative;
-
-    /* outline: 1px solid red; */
-
     width: 100%;
+    margin: 0;
+    padding: 0;
     max-width: 45vw;
     grid-column: 2;
 }
-
-
-
-
-
 
 .underTitle {
     z-index: 2;
     grid-area: underTitle;
     display: inline-block;
-
     width: 100%;
     text-align: left;
     margin-top: 1.7rem;
     margin-bottom: 0;
-    padding-bottom:0;
-    /* outline:1px solid green; */
-    /* outline:1px solid green; */
-
+    padding-bottom: 0;
 }
 
 .underTitle p {
@@ -225,90 +175,62 @@ h1 {
     margin-top: 0.2rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-
-    /* outline:1px solid red; */
 }
 
-.link-cont{
+.link-cont {
     margin-top: 0.8rem;
-    /* margin-left: 0.5rem; */
     margin-bottom: 0.6rem;
-    /* outline:1px solid red; */
-    display:flex;
-    gap:1rem;
-    /* allow flex items to wrap */
-    flex-wrap:wrap;
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
     justify-content: flex-start;
-    
 }
+
 .underTitle a {
     box-shadow: 0px 0px 0px 1px var(--white) inset;
-    /* box-shadow: border-box;
-    border: 1px solid red; */
     background: transparent;
     font-size: 20px;
-
-
     display: inline-block;
     padding: 10px 20px;
     color: var(--white);
     position: relative;
     z-index: 3;
-    /* remove default a tag styles */
     text-decoration: none;
     width: fit-content;
-    
 }
 
 .underTitle a div {
     position: absolute;
     display: inline-block;
-
     height: 0%;
     top: 0;
     left: 0;
     background: var(--white);
     z-index: -1;
     overflow: hidden;
-    transition: .2s all ease-out;
+    transition: 0.2s all ease-out;
     font-size: 20px;
-    color: red;
-
     width: 100%;
 }
 
 .underTitle a:hover div {
     display: inline-block;
     height: 100%;
-    /* add a neon glow effect */
     box-shadow: 0 0 15px var(--whiter);
-
-
 }
 
 .underTitle a:hover {
     z-index: 3;
-    transition: .2s all ease-out;
+    transition: 0.2s all ease-out;
     color: black;
 }
-
-
-
-
-
-
-
-
 
 .cardlist {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    /* 3 columns */
     grid-gap: 36px;
-    /* space between cards */
     grid-auto-rows: minmax(250px, auto);
     margin-top: 1rem;
-    /* outline: 1px solid green; */
 }
 
 .card {
@@ -317,50 +239,39 @@ h1 {
     outline: 1px solid var(--white);
     color: var(--white);
     display: grid;
-    padding:1rem;
-    /* overflow:hidden; */
-    cursor:default;
+    padding: 1rem;
+    cursor: default;
+    font-family: "Figtree", sans-serif;
 }
 
-
-
-
-
 .card h2 {
-    font-family: "Poppins", sans-serif;
+    font-family: "Figtree", sans-serif;
     font-size: 30px;
     margin: auto;
     text-align: center;
     transition: all 0.2s ease-out;
-    /* background:green; */
-    margin-bottom:0;
+    margin-bottom: 0;
     user-select: none;
 }
 
-.card:hover h2{
-    /* move up 30% of the height of the card */
+.card:hover h2 {
     transform: translateY(-1rem);
 }
 
-.card p{
+.card p {
     white-space: pre-wrap;
-
-    cursor:text;
-    font-size:16px;
-    /* background:red; */
-    opacity:0;
+    cursor: text;
+    font-size: 16px;
+    opacity: 0;
     transition: all 0.2s ease-out;
-    margin:0;
-    padding:0;
-    float:left;
+    margin: 0;
+    padding: 0;
+    float: left;
 }
-.card:hover p{
-    opacity:1;
+.card:hover p {
+    opacity: 1;
     transform: translateY(-1rem);
-
 }
-
-
 
 .card .card-expand {
     width: 100%;
@@ -370,84 +281,57 @@ h1 {
     position: absolute;
     transition: height 0.2s ease-out;
     color: black;
-    /* align vertically */
     display: flex;
     align-items: center;
     justify-content: center;
     box-shadow: 0 0 15px var(--whiter);
-
 }
 
-.card a{
+.card a {
     text-decoration: none;
     opacity: 0;
-    transition:all 0.2s ease-out;
+    transition: all 0.2s ease-out;
 }
 
 .card:hover .card-expand {
-    opacity:1;
+    opacity: 1;
     height: 25%;
-    transition:all 0.2s ease-out;
+    transition: all 0.2s ease-out;
 }
 
-.card-expand:hover a{
-    opacity:1;
-    
+.card-expand:hover a {
+    opacity: 1;
 }
 
-a{
-    cursor:pointer;
+a {
+    cursor: pointer;
 }
 
-
-.card span {
+.card .tag {
     top: 9px;
     left: 12px;
     position: absolute;
     font-size: 16px;
     line-height: 20px;
-    font-family: "Poppins", sans-serif;
+
     user-select: none;
-    /* background:red; */
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.card .tagRight {
+    top: 9px;
+    right: 12px;
+    position: absolute;
+    font-size: 16px;
+    line-height: 20px;
+    user-select: none;
+}
 
 .footer {
-
     position: relative;
     left: 0;
-    padding-top: 3rem;
+    padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     width: 100%;
-    /* background-color: #333; */
     color: var(--white);
     text-align: center;
     display: flex;
@@ -466,17 +350,9 @@ a{
     margin-right: 0px;
 }
 
-
-
-
-
-
-
 @media (max-width: 1000px) {
-
     /* half monitor */
     html {
-
         width: 92%;
     }
 
@@ -499,26 +375,22 @@ a{
         margin: 0rem;
         padding: 0rem;
         font-size: 11vw;
-        /* background: red; */
     }
 
     .title .second {
         margin-left: 0rem;
     }
 
-    .underTitle p{
-        padding-right:1rem;
+    .underTitle p {
+        padding-right: 1rem;
     }
     .top-cont {
-
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: auto;
         /* make the freebox div take up the whole column on the right */
         grid-template-areas: "title" "freebox" "underTitle";
         margin-bottom: 1rem;
-        /* outline:1px solid red; */
-        
     }
 
     .freebox {
@@ -526,22 +398,19 @@ a{
         max-width: 100%;
     }
 
-    .underTitle{
-        margin-top:0.2rem;
+    .underTitle {
+        margin-top: 0.2rem;
     }
-    .link-cont{
+    .link-cont {
         justify-content: space-evenly;
     }
 
     .cardlist {
         grid-template-columns: repeat(2, 1fr);
-        /* 2 columns */
     }
 }
 
-@media screen and (max-width: 650px),
-(max-aspect-ratio: 2/3) {
-
+@media screen and (max-width: 650px), (max-aspect-ratio: 2/3) {
     /* phone */
     .cardlist {
         grid-template-columns: 100%;
