--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,5 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@300..900&display=swap");
+/* results in font jumping
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@300..900&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700");
+@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@300..700");
 
 :root {
     --white: #fdf0ed;
